--- a/catalog-item.html
+++ b/catalog-item.html
@@ -197,7 +197,87 @@
         </div>
     </div>
 </div>
-
+<div class="new-slider-wrap">
+    <div class="container">
+        <div class="slider-title">
+            <span>
+                Похожие товары
+            </span>
+        </div>
+        <div class="new-slider">
+            <a href="#" class="catalog-item">
+                <span class="left">
+                    <img src="./images/item.png" alt="">
+                </span>
+                <span class="item-info">
+                    <span class="top-line">
+                        <img src="./images/new/new__flag_1.png" alt="">
+                        <span class="wish-button"></span>
+                    </span>
+                    <span class="type">Бренди</span>
+                    <span class="title">Pagos De Labarca Crianza  0,75 л</span>
+                    <span class="price">12 499 <span>тг</span></span>
+                </span>
+            </a>
+            <a href="#" class="catalog-item">
+                <span class="left">
+                    <img src="./images/item.png" alt="">
+                </span>
+                <span class="item-info">
+                    <span class="top-line">
+                        <img src="./images/new/new__flag_1.png" alt="">
+                        <span class="wish-button"></span>
+                    </span>
+                    <span class="type">Бренди</span>
+                    <span class="title">Pagos De Labarca Crianza  0,75 л</span>
+                    <span class="price">12 499 <span>тг</span></span>
+                </span>
+            </a>
+            <a href="#" class="catalog-item">
+                <span class="left">
+                    <img src="./images/item.png" alt="">
+                </span>
+                <span class="item-info">
+                    <span class="top-line">
+                        <img src="./images/new/new__flag_1.png" alt="">
+                        <span class="wish-button"></span>
+                    </span>
+                    <span class="type">Бренди</span>
+                    <span class="title">Pagos De Labarca Crianza  0,75 л</span>
+                    <span class="price">12 499 <span>тг</span></span>
+                </span>
+            </a>
+            <a href="#" class="catalog-item">
+                <span class="left">
+                    <img src="./images/item.png" alt="">
+                </span>
+                <span class="item-info">
+                    <span class="top-line">
+                        <img src="./images/new/new__flag_1.png" alt="">
+                        <span class="wish-button"></span>
+                    </span>
+                    <span class="type">Бренди</span>
+                    <span class="title">Pagos De Labarca Crianza  0,75 л</span>
+                    <span class="price">12 499 <span>тг</span></span>
+                </span>
+            </a>
+            <a href="#" class="catalog-item">
+                <span class="left">
+                    <img src="./images/item.png" alt="">
+                </span>
+                <span class="item-info">
+                    <span class="top-line">
+                        <img src="./images/new/new__flag_1.png" alt="">
+                        <span class="wish-button"></span>
+                    </span>
+                    <span class="type">Бренди</span>
+                    <span class="title">Pagos De Labarca Crianza  0,75 л</span>
+                    <span class="price">12 499 <span>тг</span></span>
+                </span>
+            </a>
+        </div>
+    </div>
+</div>
 <footer class="footer">
     <div class="container">
         <div class="footer__inner">
